<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_publisher_cpp</name>
  <version>0.0.0</version>
  <description>MQTT publisher (C++) using libmosquitto</description>
  <maintainer email="anggayunus139@gmail.com">workspace</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- butuh saat build -->
  <build_depend>pkg-config</build_depend>
  <build_depend>libmosquitto-dev</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <!-- dibutuhkan saat runtime -->
  <exec_depend>pkg-config</exec_depend>
  <exec_depend>libmosquitto-dev</exec_depend>
  <exec_depend>nlohmann-json3-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
